# ariadne-federation-multiple-keys

./: .gitignore  Readme.md  gateway.js  package-lock.json  package.json  pyproject.toml
services/: account_service.py  product_service.py  review_service.py  split_payment_service.py
